<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaNotas">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/fondo"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/topHeader"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="25dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                android:background="transparent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerLogo"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/otro_azul"
            android:paddingVertical="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:text="@string/registrar_title"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/otro_azul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="20dp"
            android:paddingHorizontal="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Buscar Notas"
                android:background="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="40dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota1"
                    android:elevation="10dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/azul_claro"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota2"
                    android:elevation="10dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/azul_claro"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota3"
                    android:elevation="10dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/azul_claro"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota4"
                    android:elevation="10dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/azul_claro"/>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/anadir"
                    android:padding="15dp"
                    android:backgroundTint="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>